src/math_ops/snapshots/rbx_types_ops__math_ops__vec2int16__vec2int16_div_vec2int16.snap
---
source: src/math_ops/vec2int16.rs
expression: "Vector2int16::new(15, 15).div(&Vector2int16::new(5, 10).into())"
---
Vector2int16:
  - 3
  - 1
