src/math_ops/snapshots/rbx_types_ops__math_ops__vec2int16__vec2int16_floor_div_vec2.snap
---
source: src/math_ops/vec2int16.rs
expression: "Vector2int16::new(15, 15).floor_div(&Vector2::new(5.0, 10.0).into())"
---
Vector2int16:
  - 3
  - 1
